--- a/Axios/index.html
+++ b/Axios/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>주변맛집지도</title>
+    <title>식단길잡이</title>
     <link rel="stylesheet" href="map.css">
   </head>
   <body>
     <nav>
       <div class="nav-container inner">
-        <h1 class="nav-title">주변맛집지도</h1>
-        <button class="nav-contact">contact us</button>
+        <h1 class="nav-title">식단길잡이</h1>
       </div>
     </nav>
 
     <main>
       <section id="category" class="section">
         <div class="inner">
-          <h2 class="category-title">주변맛집지도 카테고리를 선택해보세요</h2>
+          <h2 class="category-title">식단 카테고리를 선택해보세요</h2>
           <div class="category-list">
             <button id="korean" class="category-item">한식</button>
             <button id="japanese" class="category-item">일식</button>
